test/asm/strfmt.err
error: Formatting number as type 's'
    at strfmt.asm(16)
error: STRFMT: 1 unformatted argument(s)
    at strfmt.asm(16)
error: STRFMT: Illegal '%' at end of format string
    at strfmt.asm(24)
error: STRFMT: Invalid format spec for argument 1
    at strfmt.asm(26)
error: STRFMT: Not enough arguments for format spec, got: 1, need: 3
    at strfmt.asm(28)
Assembly aborted with 5 errors!
